issue-18: fix frow teacher's review

--- a/storage-service/Dockerfile
+++ b/storage-service/Dockerfile
@@ -14,3 +14,7 @@ WORKDIR /executable
 COPY --from=builder /app/storage-service/server-component/build/libs/server-component-0.0.1-SNAPSHOT.jar .
 
 VOLUME /storage
+
+EXPOSE 8080
+
+ENTRYPOINT java -jar ./server-component-0.0.1-SNAPSHOT.jar
