--- a/storage-service/server-component/src/main/resources/application.yaml
+++ b/storage-service/server-component/src/main/resources/application.yaml
@@ -7,9 +7,11 @@ storage:
       allocatedBufferSize: 4096
       type: deflate
     flush:
-      tableParentDir: "PLACEHOLDER"
+      tableParentDir: "D:\\labs\\5sem\\labs_highload\\itmo-is-25-highload\\db"
       keyValueDelimiter: ":"
       blockSizeInBytes: 65536
       entryDelimiter: ";"
       readBufferSize: 4096
+    memtable:
+      maxSize: 20
 
