issue-25: add Bloom filter for faster key search in index

--- a/storage-service/server-component/src/main/resources/application.yaml
+++ b/storage-service/server-component/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ storage:
       allocatedBufferSize: 4096
       type: deflate
     flush:
-      tableParentDir: "D:\\labs\\5sem\\labs_highload\\itmo-is-25-highload\\db"
+      tableParentDir: "PLACEHOLDER"
       keyValueDelimiter: ":"
       blockSizeInBytes: 65536
       entryDelimiter: ";"
