--- a/storage-service/server-component/src/main/resources/application.yaml
+++ b/storage-service/server-component/src/main/resources/application.yaml
@@ -3,3 +3,13 @@ storage:
     filesystem:
       storage-path: ${STORAGE_PATH:data}
       type: lsm
+    compression:
+      allocatedBufferSize: 4096
+      type: deflate
+    flush:
+      tableParentDir: "PLACEHOLDER"
+      keyValueDelimiter: ":"
+      blockSizeInBytes: 65536
+      entryDelimiter: ";"
+      readBufferSize: 4096
+
